changed social media link to two and added links added a required to email submit button

--- a/images+videos.html
+++ b/images+videos.html
@@ -104,34 +104,35 @@
    <div class="container">
   <img src="assets/images/strangnaspic.jpg" alt="video of strängnäs" class="rounded float-center img-fluid" >
   <button class="btn"><a href="https://www.youtube.com/embed/J5FrnGHEJdw" target="_blank">WATCH VIDEO</a></button>
-</div>
-  
- <hr>
-  <!--footer-->
+      </div>
 
-  <div class="footer-basic">
-    <footer>
-      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-      <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h2>
-   
-     <form class="form-inline justify-content-center">
-        <div class="form-group">
-          <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-      </form>
+      <hr>
+      <!--footer-->
 
-    </footer>
-    <p class="copyright">Chris McIlgrew © 2019</p>
+      <div class="footer-basic">
+        <footer>
+          <div class="social">
+            <a href="https://twitter.com/strangnaskommun?lang=en" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="https://www.facebook.com/strangnas/" target="_blank"><i class="icon ion-social-facebook"></i></a></div>
+          <h2>For more information about Strängnäs and the surrounding area click on the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h2>
 
-  </div>
+          <form class="form-inline justify-content-center">
+            <div class="form-group">
+              <input type="email" class="form-control required" id="email" aria-describedby="emailHelp" placeholder="Enter email" required>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </form>
+
+        </footer>
+        <p class="copyright">Chris McIlgrew © 2019</p>
+
+      </div>
 
 
 
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
