--- a/map.html
+++ b/map.html
@@ -51,20 +51,22 @@
 
 <!--footer-->
 <div class="footer-basic">
-    <footer>
-      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-      <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h2>
-        <form class="form-inline justify-content-center">
-          <div class="form-group">
-            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </div>
-        </form>
+        <footer>
+          <div class="social">
+            <a href="https://twitter.com/strangnaskommun?lang=en" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="https://www.facebook.com/strangnas/" target="_blank"><i class="icon ion-social-facebook"></i></a></div>
+          <h2>For more information about Strängnäs and the surrounding area click on the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h2>
 
-    </footer>
-    <p class="copyright">Chris McIlgrew © 2019</p>
+          <form class="form-inline justify-content-center">
+            <div class="form-group">
+              <input type="email" class="form-control required" id="email" aria-describedby="emailHelp" placeholder="Enter email" required>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </form>
 
-  </div>
+        </footer>
+        <p class="copyright">Chris McIlgrew © 2019</p>
+
+      </div>
      
 
 
