--- a/images+videos.html
+++ b/images+videos.html
@@ -41,61 +41,61 @@
     <h1 class="imagesvideos">IMAGES & VIDEOS</h1>
     <div class="row">
       <div class="col-sm-12 col-md-6">
-        <a href="assets/images/pic1.jpg" target="_blank">
+        <a href="assets/images/pic1.jpg" target="_blank"></a>
         <img src="assets/images/pic1.jpg" alt="strängnäs harbour" class="rounded float-center img-fluid">
       </div>
       <div class="col-sm-12 col-md-6">
-         <a href="assets/images/pic2.jpg" target="_blank">
+         <a href="assets/images/pic2.jpg" target="_blank"></a>
         <img src="assets/images/pic2.jpg" alt="strängnäs harbour with church" class="rounded float-center img-fluid">
       </div>
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-6">
-         <a href="assets/images/pic3.jpg" target="_blank">
+         <a href="assets/images/pic3.jpg" target="_blank"></a>
         <img src="assets/images/pic3.jpg" alt="strängnäs harbour with church and windmill" class="rounded float-center img-fluid">
       </div>
       <div class="col-sm-12 col-md-6">
-         <a href="assets/images/pic4.jpg" target="_blank">
+         <a href="assets/images/pic4.jpg" target="_blank"></a>
         <img src="assets/images/pic4.jpg" alt="strängnäs harbour with windmill" class="rounded float-center img-fluid">
       </div>
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-6">
-         <a href="assets/images/pic9.jpg" target="_blank">
+         <a href="assets/images/pic9.jpg" target="_blank"></a>
         <img src="assets/images/pic9.jpg" alt="strängnäs lake frozen" class="rounded float-center img-fluid">
       </div>
       <div class="col-sm-12 col-md-6">
-         <a href="assets/images/pic19.jpg" target="_blank">
+         <a href="assets/images/pic19.jpg" target="_blank"></a>
         <img src="assets/images/pic19.jpg" alt="strängnäs harbour" class="rounded float-center img-fluid">
       </div>
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-6">
-         <a href="assets/images/pic18.jpg" target="_blank">
+         <a href="assets/images/pic18.jpg" target="_blank"></a>
         <img src="assets/images/pic18.jpg" alt="strängnäs harbour" class="rounded float-center img-fluid">
       </div>
       <div class="col-sm-12 col-md-6">
-         <a href="assets/images/pic17.jpg" target="_blank">
+         <a href="assets/images/pic17.jpg" target="_blank"></a>
         <img src="assets/images/pic17.jpg" alt="strängnäs harbour" class="rounded float-center img-fluid">
       </div>
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-6">
-         <a href="assets/images/pic6.jpg" target="_blank">
+         <a href="assets/images/pic6.jpg" target="_blank"></a>
         <img src="assets/images/pic6.jpg" alt="view of strängnäs from afar" class="rounded float-center img-fluid">
       </div>
       <div class="col-sm-12 col-md-6">
-         <a href="assets/images/pic8.jpg" target="_blank">
+         <a href="assets/images/pic8.jpg" target="_blank"></a>
         <img src="assets/images/pic8.jpg" alt="strängnäs harbour" class="rounded float-center img-fluid">
       </div>
     </div>
     <div class="row">
       <div class="col-sm-6 col-md-6">
-         <a href="assets/images/pic14.jpg" target="_blank">
-        <img src="assets/images/pic14.jpg" alt="hepatica flowers" class="rounded float-center img-fluid">
+         <a href="assets/images/pic14.jpg" target="_blank"></a>
+      <img src="assets/images/pic14.jpg" alt="hepatica flowers" class="rounded float-center img-fluid">
       </div>
       <div class="col-sm-6 col-md-6">
-         <a href="assets/images/pic12.jpg" target="_blank">
+         <a href="assets/images/pic12.jpg" target="_blank"></a>
         <img src="assets/images/pic12.jpg" alt="frozen water on rocks" class="rounded float-center img-fluid">
       </div>
     </div>
@@ -117,7 +117,7 @@
 
           <form class="form-inline justify-content-center">
             <div class="form-group">
-              <input type="email" class="form-control required" id="email" aria-describedby="emailHelp" placeholder="Enter email" required>
+              <input type="email" class="form-control required" id="email" aria-describedby="email" placeholder="Enter email" required>
               <button type="submit" class="btn btn-primary">Submit</button>
             </div>
           </form>
