--- a/history.html
+++ b/history.html
@@ -70,7 +70,7 @@
 
           <form class="form-inline justify-content-center">
             <div class="form-group">
-              <input type="email" class="form-control required" id="email" aria-describedby="emailHelp" placeholder="Enter email" required>
+              <input type="email" class="form-control required" id="email" aria-describedby="email" placeholder="Enter email" required>
               <button type="submit" class="btn btn-primary">Submit</button>
             </div>
           </form>
