--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
   
   <title>Welcome To Strängnäs</title>
-  
+  <meta property="og:image" content="assets/images/Project1.png"/>
 </head>
 
 <body>
